# pocket-tts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-package.yml  run-tests.yml
docs/: export_voice.md  generate.md  pocket-tts-example.ipynb  python-api.md  serve.md
pocket_tts/: __init__.py  __main__.py  default_parameters.py  main.py
pocket_tts/conditioners/: base.py  text.py
pocket_tts/config/: b6369a24.yaml
pocket_tts/data/: __init__.py  audio.py  audio_utils.py
pocket_tts/models/: __init__.py  flow_lm.py  mimi.py  tts_model.py
pocket_tts/modules/: __init__.py  conv.py  dummy_quantizer.py  layer_scale.py  mimi_transformer.py  mlp.py  resample.py  rope.py  seanet.py  stateful_module.py  transformer.py
pocket_tts/static/: index.html
pocket_tts/utils/: config.py  debugging.py  logging_utils.py  utils.py  weights_loading.py
tests/: conftest.py  test_cli_generate.py  test_documentation_examples.py
